Adding html decoding

--- a/MilleniumIOS/Main.storyboard
+++ b/MilleniumIOS/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fqe-2c-O3s">
-    <device id="retina6_5" orientation="portrait" appearance="dark"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -147,14 +147,51 @@
                                     </activityIndicatorView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Les 5 derniers sons diffusés :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GQM-X6-SMG" userLabel="Last5Songs Label">
-                                <rect key="frame" x="18" y="436" width="272" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Les 5 derniers sons diffusés :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GQM-X6-SMG" userLabel="Last5Songs Label">
+                                <rect key="frame" x="18" y="480" width="366" height="24"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Swz-XE-Kqi">
-                                <rect key="frame" x="18" y="492" width="343" height="137.5"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cwz-do-0TH" userLabel="AlbumArt" customClass="SpringImageView" customModule="MilleniumIOS" customModuleProvider="target">
+                                <rect key="frame" x="47.666666666666657" y="55" width="311" height="204"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="311" id="0eT-Sh-5vf"/>
+                                    <constraint firstAttribute="height" constant="204" id="44U-7o-zIj"/>
+                                    <constraint firstAttribute="width" secondItem="cwz-do-0TH" secondAttribute="height" multiplier="1:1" constant="107" id="k1N-H3-VdE"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-WG-CLr" userLabel="Labels Stack View">
+                                <rect key="frame" x="57" y="336" width="300" height="85"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PmO-vC-rHX" userLabel="Song Label" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
+                                        <rect key="frame" x="25" y="0.0" width="250" height="31.333333333333332"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="C8B-yf-z2D"/>
+                                            <constraint firstAttribute="height" constant="31.329999999999998" id="JLr-uL-eP2"/>
+                                            <constraint firstAttribute="width" constant="250" id="wIB-4k-XZx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="F9D-mJ-gxy" userLabel="Artist Label">
+                                        <rect key="frame" x="0.0" y="49.333333333333314" width="300" height="35.666666666666657"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="DJk-Hi-h4o"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="NF1-Hv-eQ1"/>
+                                    <constraint firstAttribute="height" constant="85" id="cCb-dB-q46"/>
+                                </constraints>
+                            </stackView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Swz-XE-Kqi">
+                                <rect key="frame" x="0.0" y="429.00000000000006" width="437" height="174.66666666666669"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="288" id="RAt-wL-Id9"/>
@@ -168,7 +205,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="aYS-7R-7hD" customClass="last5songCell" customModule="MilleniumIOS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="-3" width="144" height="143.5"/>
+                                        <rect key="frame" x="0.0" y="15.666666666666666" width="144" height="143.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xSu-4X-Um4">
                                             <rect key="frame" x="0.0" y="0.0" width="144" height="143.5"/>
@@ -190,7 +227,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWY-rd-t1x">
                                                     <rect key="frame" x="8" y="98.666666666666671" width="128" height="40.666666666666671"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="137" id="rAu-Ad-Scn"/>
+                                                        <constraint firstAttribute="width" constant="128" id="rAu-Ad-Scn"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -219,55 +256,18 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cwz-do-0TH" userLabel="AlbumArt" customClass="SpringImageView" customModule="MilleniumIOS" customModuleProvider="target">
-                                <rect key="frame" x="47.666666666666657" y="55" width="311" height="204"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="311" id="0eT-Sh-5vf"/>
-                                    <constraint firstAttribute="height" constant="204" id="44U-7o-zIj"/>
-                                    <constraint firstAttribute="width" secondItem="cwz-do-0TH" secondAttribute="height" multiplier="1:1" constant="107" id="k1N-H3-VdE"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-WG-CLr" userLabel="Labels Stack View">
-                                <rect key="frame" x="61" y="333" width="300" height="85"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PmO-vC-rHX" userLabel="Song Label" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
-                                        <rect key="frame" x="25" y="0.0" width="250" height="31.333333333333332"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="C8B-yf-z2D"/>
-                                            <constraint firstAttribute="height" constant="31.329999999999998" id="JLr-uL-eP2"/>
-                                            <constraint firstAttribute="width" constant="250" id="wIB-4k-XZx"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="F9D-mJ-gxy" userLabel="Artist Label">
-                                        <rect key="frame" x="0.0" y="49.333333333333314" width="300" height="35.666666666666657"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="DJk-Hi-h4o"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="NF1-Hv-eQ1"/>
-                                    <constraint firstAttribute="height" constant="85" id="cCb-dB-q46"/>
-                                </constraints>
-                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="jCH-5X-UOd" firstAttribute="trailing" secondItem="Swz-XE-Kqi" secondAttribute="trailing" constant="15" id="9SV-Mo-Lhq"/>
-                            <constraint firstItem="Swz-XE-Kqi" firstAttribute="leading" secondItem="jCH-5X-UOd" secondAttribute="leading" constant="17" id="B5y-9W-NXe"/>
-                            <constraint firstItem="GQM-X6-SMG" firstAttribute="leading" secondItem="ka9-Kw-W94" secondAttribute="leading" constant="6" id="DI0-WF-0Nd"/>
-                            <constraint firstItem="BP9-WG-CLr" firstAttribute="top" secondItem="Zdj-J7-mma" secondAttribute="bottom" constant="16" id="Dkf-v3-p1s"/>
-                            <constraint firstAttribute="trailing" secondItem="GQM-X6-SMG" secondAttribute="trailing" constant="97" id="Hg0-c4-Iaa"/>
-                            <constraint firstItem="Zdj-J7-mma" firstAttribute="centerX" secondItem="BP9-WG-CLr" secondAttribute="centerX" id="XCK-XK-KPJ"/>
+                            <constraint firstItem="jCH-5X-UOd" firstAttribute="trailing" secondItem="Swz-XE-Kqi" secondAttribute="trailing" constant="-23" id="9SV-Mo-Lhq"/>
+                            <constraint firstItem="Swz-XE-Kqi" firstAttribute="leading" secondItem="jCH-5X-UOd" secondAttribute="leading" id="B5y-9W-NXe"/>
+                            <constraint firstItem="GQM-X6-SMG" firstAttribute="leading" secondItem="ka9-Kw-W94" secondAttribute="leading" constant="18" id="DI0-WF-0Nd"/>
+                            <constraint firstItem="BP9-WG-CLr" firstAttribute="top" secondItem="Zdj-J7-mma" secondAttribute="bottom" constant="19" id="Dkf-v3-p1s"/>
+                            <constraint firstAttribute="trailing" secondItem="GQM-X6-SMG" secondAttribute="trailing" constant="30" id="Hg0-c4-Iaa"/>
+                            <constraint firstItem="Zdj-J7-mma" firstAttribute="centerX" secondItem="BP9-WG-CLr" secondAttribute="centerX" constant="1.5" id="XCK-XK-KPJ"/>
                             <constraint firstItem="Zdj-J7-mma" firstAttribute="top" secondItem="cwz-do-0TH" secondAttribute="bottom" constant="8" id="ZtV-Yd-IL7"/>
-                            <constraint firstItem="Swz-XE-Kqi" firstAttribute="top" secondItem="GQM-X6-SMG" secondAttribute="bottom" constant="18" id="bdG-PJ-Pjg"/>
-                            <constraint firstItem="GQM-X6-SMG" firstAttribute="top" secondItem="BP9-WG-CLr" secondAttribute="bottom" constant="41.666666666666686" id="g4E-ho-pVv"/>
+                            <constraint firstItem="Swz-XE-Kqi" firstAttribute="top" secondItem="GQM-X6-SMG" secondAttribute="bottom" constant="-75" id="bdG-PJ-Pjg"/>
+                            <constraint firstItem="GQM-X6-SMG" firstAttribute="top" secondItem="BP9-WG-CLr" secondAttribute="bottom" constant="59" id="g4E-ho-pVv"/>
                             <constraint firstItem="Zdj-J7-mma" firstAttribute="centerX" secondItem="cwz-do-0TH" secondAttribute="centerX" constant="5.5" id="kPm-p8-ktu"/>
                             <constraint firstItem="cwz-do-0TH" firstAttribute="centerX" secondItem="ka9-Kw-W94" secondAttribute="centerX" constant="-4" id="q30-7V-Ehg"/>
                             <constraint firstItem="cwz-do-0TH" firstAttribute="top" secondItem="jCH-5X-UOd" secondAttribute="top" constant="11" id="vAW-XS-SbN"/>
