--- a/MilleniumIOS/Main.storyboard
+++ b/MilleniumIOS/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fqe-2c-O3s">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fqe-2c-O3s">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -132,13 +132,10 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Zdj-J7-mma" userLabel="Controls Stack View">
-                                <rect key="frame" x="152.33333333333334" y="348" width="107.33333333333334" height="80"/>
+                                <rect key="frame" x="173.66666666666666" y="344" width="64.666666666666657" height="48"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afd-5L-Tkr" userLabel="PlayButton">
-                                        <rect key="frame" x="0.0" y="0.0" width="85.333333333333329" height="80"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="80" id="pHG-r6-AFL"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="42.666666666666664" height="48"/>
                                         <state key="normal" image="btn-play">
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -148,7 +145,7 @@
                                         </connections>
                                     </button>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Dsq-mJ-DLL">
-                                        <rect key="frame" x="87.333333333333314" y="0.0" width="20" height="80"/>
+                                        <rect key="frame" x="44.666666666666686" y="0.0" width="20" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="qv7-l2-cOs"/>
                                         </constraints>
@@ -159,12 +156,14 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-WG-CLr" userLabel="Labels Stack View">
-                                <rect key="frame" x="56" y="446.66666666666669" width="300" height="75.000000000000057"/>
+                                <rect key="frame" x="56" y="410.66666666666669" width="300" height="75"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PmO-vC-rHX" userLabel="Song Label" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
                                         <rect key="frame" x="35" y="0.0" width="230" height="30.666666666666668"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="PmO-vC-rHX" secondAttribute="height" multiplier="140:33" constant="100" id="8F2-nw-QgX"/>
+                                            <constraint firstAttribute="height" constant="30.670000000000002" id="CyW-4h-cn9"/>
+                                            <constraint firstAttribute="height" constant="30.670000000000002" id="mab-09-xeo"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -173,6 +172,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="F9D-mJ-gxy" userLabel="Artist Label">
                                         <rect key="frame" x="93.666666666666657" y="48.666666666666629" width="112.66666666666666" height="26.333333333333329"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="26.329999999999998" id="dpW-uw-6QW"/>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" secondItem="F9D-mJ-gxy" secondAttribute="height" multiplier="103:2" constant="100" id="sZr-mL-PKi"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
@@ -181,7 +181,7 @@
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="BP9-WG-CLr" secondAttribute="height" multiplier="4:1" id="IEn-nM-GFq"/>
+                                    <constraint firstAttribute="width" secondItem="BP9-WG-CLr" secondAttribute="height" multiplier="4:1" id="mPE-d5-aa2"/>
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Les 5 derniers sons diffusés :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GQM-X6-SMG" userLabel="Last5Songs Label">
@@ -265,22 +265,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Zdj-J7-mma" firstAttribute="top" secondItem="cwz-do-0TH" secondAttribute="bottom" constant="31" id="1V4-vX-U61"/>
                             <constraint firstItem="BP9-WG-CLr" firstAttribute="leading" secondItem="jCH-5X-UOd" secondAttribute="leading" constant="56" id="7XS-5D-NyN"/>
-                            <constraint firstItem="Swz-XE-Kqi" firstAttribute="leading" secondItem="jCH-5X-UOd" secondAttribute="leading" id="D4D-QU-snc"/>
                             <constraint firstItem="GQM-X6-SMG" firstAttribute="leading" secondItem="jCH-5X-UOd" secondAttribute="leading" constant="6" id="FO4-qv-iZY"/>
                             <constraint firstItem="Swz-XE-Kqi" firstAttribute="centerX" secondItem="ka9-Kw-W94" secondAttribute="centerX" id="KZP-RZ-boD"/>
                             <constraint firstItem="BP9-WG-CLr" firstAttribute="top" secondItem="Zdj-J7-mma" secondAttribute="bottom" constant="18.5" id="UcL-gJ-ox1"/>
                             <constraint firstItem="Swz-XE-Kqi" firstAttribute="centerX" secondItem="ka9-Kw-W94" secondAttribute="centerX" id="Ul0-J6-pdk"/>
                             <constraint firstItem="Swz-XE-Kqi" firstAttribute="top" secondItem="GQM-X6-SMG" secondAttribute="bottom" constant="5" id="W9t-ne-ekj"/>
+                            <constraint firstItem="jCH-5X-UOd" firstAttribute="trailing" secondItem="BP9-WG-CLr" secondAttribute="trailing" constant="58" id="Ync-hK-lme"/>
                             <constraint firstItem="cwz-do-0TH" firstAttribute="top" secondItem="jCH-5X-UOd" secondAttribute="top" constant="24" id="a2b-JO-FYZ"/>
                             <constraint firstItem="Zdj-J7-mma" firstAttribute="centerX" secondItem="BP9-WG-CLr" secondAttribute="centerX" id="aZe-ka-gPj"/>
                             <constraint firstItem="Swz-XE-Kqi" firstAttribute="bottom" secondItem="jCH-5X-UOd" secondAttribute="bottom" id="cfP-yN-qQY"/>
                             <constraint firstItem="cwz-do-0TH" firstAttribute="centerX" secondItem="ka9-Kw-W94" secondAttribute="centerX" id="gJx-h9-FgK"/>
                             <constraint firstItem="cwz-do-0TH" firstAttribute="leading" secondItem="jCH-5X-UOd" secondAttribute="leading" constant="18" id="ia0-DU-DgQ"/>
+                            <constraint firstItem="Zdj-J7-mma" firstAttribute="top" secondItem="cwz-do-0TH" secondAttribute="bottom" constant="27" id="p5q-EL-P3q"/>
                             <constraint firstItem="jCH-5X-UOd" firstAttribute="trailing" secondItem="GQM-X6-SMG" secondAttribute="trailing" constant="5" id="rXs-eZ-oOu"/>
-                            <constraint firstItem="Swz-XE-Kqi" firstAttribute="trailing" secondItem="jCH-5X-UOd" secondAttribute="trailing" id="wPX-RZ-brv"/>
-                            <constraint firstItem="jCH-5X-UOd" firstAttribute="trailing" secondItem="BP9-WG-CLr" secondAttribute="trailing" constant="58" id="yYb-ns-uWb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jCH-5X-UOd"/>
                     </view>
@@ -388,6 +386,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="C'était quoi ?" id="2wx-Na-iAe">
                         <barButtonItem key="rightBarButtonItem" title="CalandarSearch" image="uezihfeg" largeContentSizeImage="uezihfeg" id="0gT-QQ-SVx">
+                            <color key="tintColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="DatepickerButtonTouched:" destination="Jgh-Wr-gYT" id="iPB-hp-IiG"/>
                             </connections>
@@ -594,6 +593,7 @@
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="L4r-7R-750">
                                         <rect key="frame" x="-2" y="46" width="418" height="39"/>
+                                        <color key="minimumTrackTintColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="sliderValueChange:" destination="mxW-d0-DgZ" eventType="valueChanged" id="Bih-ex-4g3"/>
                                         </connections>
@@ -621,7 +621,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9U5-S2-5KG"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Replays" id="x4M-mx-mom"/>
+                    <navigationItem key="navigationItem" title="Replays" id="x4M-mx-mom">
+                        <barButtonItem key="backBarButtonItem" title="Retour" id="VPc-eW-b8r"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="ImageView" destination="8eG-pz-hVy" id="Jz7-ur-aEC"/>
                         <outlet property="Podcast" destination="IWW-5d-6Uu" id="9Pq-8n-j1V"/>
